--- a/calculator.html
+++ b/calculator.html
@@ -20,7 +20,6 @@
 		  			<div class="col-lg-6">
 				    	<div class="form-group">
 				    		<select class="form-control input-lg" id="operators">
-
 				    		</select>
 				    		<input class="form-control input-lg" type="number" placeholder="enter a number" />
 				    		<button id="btnAdd" class="btn btn-default btn-lg">Add step</button>
@@ -57,6 +56,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
