--- a/calculator.html
+++ b/calculator.html
@@ -6,62 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Calculator problem</title>
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-1.23.1.css">
   </head>
   <body>
-  <div class="container">
-    <div class="row">
-    	<div class=".col-md-6 .col-md-offset-3">
-    		<div class="page-header">
-			    <h1>Calculator</h1>
-    		</div>
-		    <form role="form" class="form-inline">
-		    	<div class="row">
-		  			<div class="col-lg-6">
-				    	<div class="form-group">
-				    		<select class="form-control input-lg" id="operators">
-				    		</select>
-				    		<input class="form-control input-lg" type="number" placeholder="enter a number" />
-				    		<button id="btnAdd" class="btn btn-default btn-lg">Add step</button>
-				  		</div>
-		  			</div>
-		    	</div>
-		  		<div class="row">
-		  			<div class="col-lg-6">
-		  				<ol id="instructions" class="jumbotron" style="margin-top: 2em;">
+    <div class="container">
+        <div class="row">
+    	    <div class=".col-md-6 .col-md-offset-3">
+                <div class="page-header">
+                    <h1>Calculator</h1>
+                </div>
+                <form role="form" class="form-inline">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <select class="form-control input-lg" id="operators">
+                                </select>
+                                <input class="form-control input-lg" type="number" placeholder="enter a number" />
+                                <button id="btnAdd" class="btn btn-default btn-lg">Add step</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ol id="instructions" class="jumbotron" style="margin-top: 2em;">
 
-		  				</ol>
-		  			</div>
-		  		</div>
-		  		<div class="row">
-		  			<div class="col-lg-6">
-			  			<button id="btnCalculate" class="btn btn-primary btn-lg">Calculate</button>
-			  			<button id="btnReset" class="btn btn-danger btn-lg">Reset</button>
-			  		</div>
-		  		</div>
-		  		<div class="row">
-		  			<div class="col-lg-6">
-		  			<h2>Result: <span id="result" class="result">N/A</span></h2>
-			  		</div>
-		  		</div>
-		  		</p>
-		    </form>
-	  	</div>
-	</div>
-</div>
-
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
-    <script src="script.js"></script>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <button id="btnCalculate" class="btn btn-primary btn-lg">Calculate</button>
+                            <button id="btnReset" class="btn btn-danger btn-lg">Reset</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                        <h2>Result: <span id="result" class="result">N/A</span></h2>
+                        </div>
+                    </div>
+                </form>
+                <h3>QUnit Test results:</h3>
+                <div id="qunit"></div>
+	  	    </div>
+	    </div>
+        
+        <div id="qunit-fixture"></div>
+    </div>
+   
     <script src="operations/add.js"></script>
+    <script src="operations/substract.js"></script>
     <script src="operations/multiply.js"></script>
     <script src="operations/divide.js"></script>
-    
-
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/qunit/qunit-1.23.1.js"></script>
+    <script src="tests.js"></script>
   </body>
 </html>
